--- a/week_2_Householder_QR.ipynb
+++ b/week_2_Householder_QR.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 302,
+   "execution_count": 251,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,12 +212,13 @@
     "        vec = a1[:,0]\n",
     "        vec_, H = householder(vec)\n",
     "        H_[j:,j:] = H\n",
+    "        #print(H_)\n",
     "        a1_ = H_ @ a1_\n",
     "        q = q @ H_.T\n",
     "         \n",
     "        a1 = a1_[j+1:,j+1:]\n",
     "        j+=1\n",
-    "        print(a1_)\n",
+    "        #print(a1_)\n",
     "    return q, a1_\n",
     "\n",
     "        \n",
@@ -226,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 303,
+   "execution_count": 252,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,15 +238,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 304,
+   "execution_count": 253,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "[[ 1.40152769  1.2514379   0.89523615]\n [ 0.          0.37150831 -0.02435426]\n [ 0.          0.65808224  0.85360724]\n [ 0.         -0.09775808  0.16980189]\n [ 0.          0.35723078  0.11183099]]\n[[ 1.40152769  1.2514379   0.89523615]\n [ 0.          0.84158252  0.68447942]\n [ 0.          0.         -0.13872729]\n [ 0.         -0.          0.31721312]\n [ 0.          0.         -0.42684399]]\n[[ 1.40152769  1.2514379   0.89523615]\n [ 0.          0.84158252  0.68447942]\n [ 0.         -0.          0.5496046 ]\n [ 0.          0.          0.        ]\n [ 0.         -0.         -0.        ]]\n"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Test II.1 (20% of the total grade)\n",
     "\n",
@@ -269,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 306,
+   "execution_count": 254,
    "metadata": {},
    "outputs": [
     {
@@ -279,7 +274,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-306-d77be3590bfa>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0massert_allclose\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mqq\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrr\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0ma\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0massert_allclose\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mq\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mqq\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[0massert_allclose\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mr\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrr\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-254-d77be3590bfa>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0massert_allclose\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mqq\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrr\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0ma\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0massert_allclose\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mq\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mqq\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[0massert_allclose\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mr\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrr\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32m~/anaconda3/lib/python3.7/site-packages/numpy/testing/_private/utils.py\u001b[0m in \u001b[0;36massert_allclose\u001b[0;34m(actual, desired, rtol, atol, equal_nan, err_msg, verbose)\u001b[0m\n\u001b[1;32m   1513\u001b[0m     \u001b[0mheader\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'Not equal to tolerance rtol=%g, atol=%g'\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mrtol\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0matol\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1514\u001b[0m     assert_array_compare(compare, actual, desired, err_msg=str(err_msg),\n\u001b[0;32m-> 1515\u001b[0;31m                          verbose=verbose, header=header, equal_nan=equal_nan)\n\u001b[0m\u001b[1;32m   1516\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1517\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32m~/anaconda3/lib/python3.7/site-packages/numpy/testing/_private/utils.py\u001b[0m in \u001b[0;36massert_array_compare\u001b[0;34m(comparison, x, y, err_msg, verbose, header, precision, equal_nan, equal_inf)\u001b[0m\n\u001b[1;32m    839\u001b[0m                                 \u001b[0mverbose\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mverbose\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mheader\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mheader\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    840\u001b[0m                                 names=('x', 'y'), precision=precision)\n\u001b[0;32m--> 841\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mAssertionError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmsg\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    842\u001b[0m     \u001b[0;32mexcept\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    843\u001b[0m         \u001b[0;32mimport\u001b[0m \u001b[0mtraceback\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mAssertionError\u001b[0m: \nNot equal to tolerance rtol=1e-07, atol=0\n\nMismatch: 80%\nMax absolute difference: 1.24996836\nMax relative difference: 2.66316363\n x: array([[ 0.13665 ,  0.536013, -0.093698,  0.769714,  0.304596],\n       [ 0.560359,  0.09354 , -0.533269,  0.018395, -0.626525],\n       [ 0.197259,  0.659489,  0.600685, -0.323847, -0.245895],...\n y: array([[-0.13665 ,  0.536013,  0.093698,  0.661619, -0.497491],\n       [-0.560359,  0.09354 ,  0.533269, -0.524772, -0.342763],\n       [-0.197259,  0.659489, -0.600685, -0.37879 ,  0.147848],..."
@@ -306,7 +301,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*Enter your explanation here* (10% of the total grade, peer-graded)"
+    "We can see, that our answer differ from library, because in that QR, we think about argument of $x_j$, to give this decompose uniqueness. We didn't think about this in our decompose."
    ]
   },
   {
@@ -346,10 +341,144 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 255,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def qr_decomp_mod(a):\n",
+    "    \"\"\"Compute the QR decomposition of a matrix.\n",
+    "    \n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    a : ndarray, shape(m, n)\n",
+    "        The input matrix\n",
+    "    \n",
+    "    Returns\n",
+    "    -------\n",
+    "    q : ndarray, shape(m, m)\n",
+    "        The orthogonal matrix\n",
+    "    r : ndarray, shape(m, n)\n",
+    "        The upper triangular matrix\n",
+    "        \n",
+    "    Examples\n",
+    "    --------\n",
+    "    >>> a = np.random.random(size=(3, 5))\n",
+    "    >>> q, r = qr_decomp(a)\n",
+    "    >>> np.assert_allclose(np.dot(q, r), a)\n",
+    "    \n",
+    "    \"\"\"\n",
+    "    a1 = np.array(a, copy=True, dtype=float)\n",
+    "    m, n = a.shape\n",
+    "    a1_ = a1.copy()\n",
+    "    vec = np.array([])\n",
+    "    M = np.array([])\n",
+    "    k = 0\n",
+    "    j = 0\n",
+    "    vec_ = np.ones(m)\n",
+    "    while j < min(n,m-1):\n",
+    "        k += 1\n",
+    "        vec = a1[:,0]\n",
+    "        y = np.zeros(vec.shape[0])\n",
+    "        y[0] = np.linalg.norm(vec)\n",
+    "        u = (vec - y)/np.linalg.norm(vec - y)\n",
+    "        a1_[j:,j:] = a1_[j:,j:] - 2*np.outer(u,u.T @ a1_[j:,j:])\n",
+    "        M = np.concatenate((M, u), axis = 0)\n",
+    "        a1 = a1_[j+1:,j+1:]\n",
+    "        j+=1\n",
+    "\n",
+    "    return M, a1_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 256,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": "[-0.6570196   0.42644006  0.15011669  0.47562065  0.37111197 -0.52846942\n  0.73983285 -0.10990213  0.40160796 -0.79133207  0.36468006 -0.49071581]\n[[0. 0. 0.]\n [0. 0. 0.]\n [0. 0. 0.]\n [0. 0. 0.]\n [0. 0. 0.]]\n"
+    }
+   ],
+   "source": [
+    "rndm = np.random.RandomState(1234)\n",
+    "a = rndm.uniform(size=(5, 3))\n",
+    "q, r = qr_decomp(a)\n",
+    "ref, r1 = qr_decomp_mod(a)\n",
+    "print(ref)\n",
+    "# test the decomposition on upper triangular matrix, but we can know, that rounding, can replace 0 -> -0, and it can give to us mismatch\n",
+    "print(abs(r - r1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 257,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def r_constr(a,M):\n",
+    "    m, n = a.shape\n",
+    "    j = 0\n",
+    "    q = np.eye(m)\n",
+    "    q_ = np.eye(m)\n",
+    "    while j < min(m-1,n):\n",
+    "        Q_ = np.eye(m)\n",
+    "        u = M[-(m - min(n,m-1)+j+1):]\n",
+    "        M = M[0:(M.shape[0] - min(n,m-1) - j)]\n",
+    "        #print(u)\n",
+    "        q = np.eye(u.shape[0]) - 2 * np.outer(u,u)\n",
+    "        Q_[-q.shape[0]:,-q.shape[0]:] = q\n",
+    "        #print(Q_)\n",
+    "        q_ = q_ @ Q_\n",
+    "        j += 1\n",
+    "    return q_, q_ @ a\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 258,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": "[[0. 0. 0.]\n [0. 0. 0.]\n [0. 0. 0.]\n [0. 0. 0.]\n [0. 0. 0.]]\n[[0. 0. 0.]\n [0. 0. 0.]\n [0. 0. 0.]\n [0. 0. 0.]\n [0. 0. 0.]]\n[[0. 0. 0.]\n [0. 0. 0.]\n [0. 0. 0.]\n [0. 0. 0.]\n [0. 0. 0.]]\n[[0. 0. 0. 0. 0.]\n [0. 0. 0. 0. 0.]\n [0. 0. 0. 0. 0.]\n [0. 0. 0. 0. 0.]\n [0. 0. 0. 0. 0.]]\n"
+    }
+   ],
+   "source": [
+    "rndm = np.random.RandomState(1234)\n",
+    "a = rndm.uniform(size=(5, 3))\n",
+    "q, r = qr_decomp(a)\n",
+    "ref, r1 = qr_decomp_mod(a)\n",
+    "q2, r2 = r_constr(a, ref)\n",
+    "print(abs(r- r1)) #checking absolute difference between upper triangular matrices from the first and the second decomposes\n",
+    "print(abs(r- r2)) #checking absolute difference between upper triangular matrices from the first decompose and constructing\n",
+    "print(abs(r1 - r2)) #checking absolute difference between upper triangular matrices from the second decompose and constructing\n",
+    "print(abs(q - q2.T)) #checking absolute difference of orthogonal matrices"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 260,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "'I am always check an absolute difference, because all algorithms can lost signes, when they get rid of computational errors.'"
+     },
+     "execution_count": 260,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"I am always check an absolute difference, because all algorithms can lost signes, when they get rid of computational errors.\""
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
