--- a/week_3_newton_fixed_pt.ipynb
+++ b/week_3_newton_fixed_pt.ipynb
@@ -16,10 +16,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 8,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def newton_iteration(f, fder, x0, eps=1e-5, maxiter=1000):\n",
@@ -49,7 +47,14 @@
     "    niter : int\n",
     "        The number of iterations.\n",
     "    \"\"\"\n",
-    "    # ... ENTER YOUR CODE HERE ..."
+    "    niter = 0\n",
+    "    x = x0\n",
+    "    while True:\n",
+    "        if abs(f(x)/fder(x)) < eps:\n",
+    "            break\n",
+    "        x = x - f(x)/fder(x)\n",
+    "        niter +=1 \n",
+    "    return(x, niter)"
    ]
   },
   {
@@ -63,13 +68,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": "(1.000000153301663, 13)\n"
+    }
+   ],
    "source": [
-    "# ... ENTER YOUR CODE HERE ..."
+    "def test(x):\n",
+    "    return x**2 - 1\n",
+    "def test_der(x):\n",
+    "    return 2*x\n",
+    "\n",
+    "print(newton_iteration(test,test_der,1000))"
    ]
   },
   {
@@ -89,13 +103,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 12,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# ... ENTER YOUR CODE HERE ..."
+    "def newton_iteration_mod(f, fder, x0, m, eps=1e-5, maxiter=1000):\n",
+    "    niter = 0\n",
+    "    x = x0\n",
+    "    while True:\n",
+    "        if abs(f(x)/fder(x)) < eps:\n",
+    "            break\n",
+    "        x = x - m*f(x)/fder(x)\n",
+    "        niter +=1 \n",
+    "    return(x, niter)\n",
+    "def test2(x):\n",
+    "    return (x**2-1)**2\n",
+    "def test_der2(x):\n",
+    "    return 4*x*(x**2-1)\n",
+    "print(newton_iteration_mod(test,test_der,10,1), newton_iteration_mod(test,test_der,10,2), newton_iteration_mod(test,test_der,10,1), newton_iteration_mod(test,test_der,10,3), newton_iteration_mod(test,test_der,10,4), newton_iteration_mod(test,test_der,10,5))"
    ]
   },
   {
@@ -193,7 +218,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.7.4-final"
   }
  },
  "nbformat": 4,
